<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/drawingViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_drawing_view_layout"
        android:padding="1dp"
        app:layout_constraintBottom_toTopOf="@id/colorPallet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/backgroundImage"
            android:scaleType="centerCrop" />

        <com.example.drawingapp.DrawingView
            android:id="@+id/drawingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/colorPallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/attributesButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawingViewContainer">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/skin"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/red"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/blue"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/yellow"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/green"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/lollipop"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/random"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:contentDescription="@string/colorPallet"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/attributesButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageButton
            android:id="@+id/imageButtonGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/galleryImage"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gallery" />

        <ImageButton
            android:id="@+id/imageButtonUndo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/undoImage"
            android:scaleType="fitXY"
            android:src="@drawable/ic_undo" />

        <ImageButton
            android:id="@+id/imageButtonBrush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/brushImage"
            android:scaleType="fitXY"
            android:src="@drawable/ic_brush" />

        <ImageButton
            android:id="@+id/imageButtonSave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/saveImage"
            android:scaleType="fitXY"
            android:src="@drawable/ic_save" />

        <Button
            android:id="@+id/button3"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="B" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>